...
  "adminManageUserGroups": "Gérer les groupes d'utilisateurs",
  "adminManageUsersAssociationMemberships": "Gérer les adhésions des utilisateurs",
  "adminMaximum": "Maximum",
  "adminMembers": "Membres",
  "adminMembershipAddingError": "Erreur lors de l'ajout (surement dû à une superposition de dates)",
  "adminMemberships": "Adhésions",
  "adminMembershipUpdatingError": "Erreur lors de la modification (surement dû à une superposition de dates)",
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modifier les permissions",
  "adminName": "Nom",
  "adminNoGroup": "Aucun groupe",
  "adminNoManager": "Aucun manager n'est sélectionné",
  "adminNoMember": "Aucun membre",
  "adminNoMembership": "Pas d'adhésion",
  "adminNoMoreLoaner": "Aucun prêteur n'est disponible",
  "adminNoSchool": "Sans école",
...
  "seedLibraryAddSpecies": "Ajouter une espèce",
  "seedLibraryAll": "Toutes",
  "seedLibraryAncestor": "Ancêtre",
  "seedLibraryAround": "environ",
  "seedLibraryAutumn": "Automne",
  "seedLibraryBorrowedPlant": "Plante empruntée",
  "seedLibraryBorrowingDate": "Date d'emprunt :",
  "seedLibraryBorrowPlant": "Emprunter la plante",
  "seedLibraryCard": "Carte",
  "seedLibraryChoosingAncestor": "Veuillez choisir un ancêtre",
  "seedLibraryChoosingSpecies": "Veuillez choisir une espèce",
  "seedLibraryChoosingSpeciesOrAncestor": "Veuillez choisir une espèce ou un ancêtre",
  "seedLibraryContact": "Contact :",
  "seedLibraryDays": "jours",
  "seedLibraryDeadMsg": "Voulez-vous déclarer la plante morte ?",
  "seedLibraryDeadPlant": "Plante morte",
  "seedLibraryDeathDate": "Date de mort",
  "seedLibraryDeletedSpecies": "Espèce supprimée",
  "seedLibraryDeleteSpecies": "Supprimer l'espèce ?",
  "seedLibraryDeleting": "Suppression",
  "seedLibraryDeletingError": "Erreur lors de la suppression",
  "seedLibraryDepositNotAvailable": "Le dépôt de plantes n'est pas possible sans emprunter une plante au préalable",
  "seedLibraryDescription": "Description",
  "seedLibraryDifficulty": "Difficulté :",
  "seedLibraryEdit": "Modifier",
  "seedLibraryEditedPlant": "Plante modifiée",
  "seedLibraryEditInformation": "Modifier les informations",
  "seedLibraryEditingError": "Erreur lors de la modification",
  "seedLibraryEditSpecies": "Modifier l'espèce",
  "seedLibraryEmptyDifficultyError": "Veuillez choisir une difficulté",
  "seedLibraryEmptyFieldError": "Veuillez remplir tous les champs",
  "seedLibraryEmptyTypeError": "Veuillez choisir un type de plante",
...
  "seedLibraryNoDateError": "Veuillez entrer une date",
  "seedLibraryNoFilteredPlants": "Aucune plante ne correspond à votre recherche. Essayez d'autres filtres.",
  "seedLibraryNoMorePlant": "Aucune plante n'est disponible",
  "seedLibraryNoPersonalPlants": "Vous n'avez pas encore de plantes dans votre grainothèque. Vous pouvez en ajouter en allant dans les stocks.",
  "seedLibraryNoSpecies": "Aucune espèce trouvée",
  "seedLibraryNoStockPlants": "Aucune plante disponible dans le stock",
  "seedLibraryNotes": "Notes",
  "seedLibraryOk": "OK",
  "seedLibraryPlantationPeriod": "Période de plantation :",
  "seedLibraryPlantationType": "Type de plantation :",
  "seedLibraryPlantDetail": "Détail de la plante",
  "seedLibraryPlantingDate": "Date de plantation",
  "seedLibraryPlantingNow": "Je la plante maintenant",
  "seedLibraryPrefix": "Préfixe",
  "seedLibraryPrefixError": "Prefixe déjà utilisé",
  "seedLibraryPrefixLengthError": "Le préfixe doit faire 3 caractères",
  "seedLibraryPropagationMethod": "Méthode de propagation :",
  "seedLibraryReference": "Référence :",
  "seedLibraryRemovedPlant": "Plante supprimée",
  "seedLibraryRemovingError": "Erreur lors de la suppression",
  "seedLibraryResearch": "Recherche",
  "seedLibrarySaveChanges": "Sauvegarder les modifications",
  "seedLibrarySeason": "Saison :",
  "seedLibrarySeed": "Graine",
  "seedLibrarySeedDeposit": "Dépôt de plantes",
  "seedLibrarySeedLibrary": "Grainothèque",
  "seedLibrarySeedQuantity": "Quantité de graines :",
  "seedLibrarySeedQuantitySimple": "Quantité de graines",
...
